Working AWS deploy

--- a/samconfig.toml
+++ b/samconfig.toml
@@ -17,6 +17,10 @@ capabilities = "CAPABILITY_IAM"
 confirm_changeset = true
 resolve_s3 = true
 resolve_image_repos = true
+s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-126oc7da84yev"
+s3_prefix = "sam-bot"
+region = "us-east-2"
+image_repositories = ["HelloWorldFunction=492604706822.dkr.ecr.us-east-2.amazonaws.com/sambot9385960c/helloworldfunction19d43fc4repo"]
 
 [default.package.parameters]
 resolve_s3 = true
