--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -7,6 +7,7 @@
   "author": "SAM CLI",
   "license": "MIT",
   "dependencies": {
+    "@slack/bolt": "^3.13.1",
     "axios": ">=0.21.1"
   },
   "scripts": {
