--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -6,15 +6,31 @@
   "repository": "https://github.com/awslabs/aws-sam-cli/tree/develop/samcli/local/init/templates/cookiecutter-aws-sam-hello-nodejs",
   "author": "SAM CLI",
   "license": "MIT",
+  "scripts": {
+    "unit": "jest",
+    "lint": "eslint '*.ts' --quiet --fix",
+    "compile": "tsc",
+    "test": "npm run compile && npm run unit"
+  },
   "dependencies": {
     "@slack/bolt": "^3.13.1",
-    "axios": ">=0.21.1"
-  },
-  "scripts": {
-    "test": "mocha tests/unit/"
+    "esbuild": "^0.14.14"
   },
   "devDependencies": {
-    "chai": "^4.3.6",
-    "mocha": "^10.1.0"
+    "@slack/types": "^2.8.0",
+    "@types/aws-lambda": "^8.10.92",
+    "@types/jest": "^29.5.2",
+    "@types/node": "^18.11.4",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
+    "esbuild-jest": "^0.5.0",
+    "eslint": "^8.8.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^29.6.1",
+    "prettier": "^2.5.1",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   }
 }
