--- a/slack/package.json
+++ b/slack/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "hello_world",
+  "name": "chatmmc",
   "version": "1.0.0",
-  "description": "hello world sample for NodeJS",
+  "description": "Slack bot using Bolt and AWS SAM",
   "main": "app.js",
-  "repository": "https://github.com/awslabs/aws-sam-cli/tree/develop/samcli/local/init/templates/cookiecutter-aws-sam-hello-nodejs",
+  "repository": "https://github.com/erinknight242/sam-bot",
   "author": "SAM CLI",
   "license": "MIT",
   "scripts": {
